--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
 					<li class="fragment fade-down">Detalles técnicos</li>
 					<li class="fragment fade-down">Modelo de negocio</li>
 				</ol>
-
-				<aside class="notes">
-				</aside>
 			</section>
 			<section id="Enredarte" data-timing="120">
 				<img class="imagen" width="250" height="250" src="images/Logo Enredarte.jpg">
@@ -74,18 +71,19 @@
 				<p class="fragment fade-down">¿Qué es el Fibrofacil?</p>
 
 				<aside class="notes">
-					<h3>Hasta acá 1:30 minutos</h3>
 					<ul>
 						<li>Iniciada en el 2012 como una necesidad de ingreso</li>
-						<li>Proveedora de prod en Fibro a nivel local y regional</li>
 						<li>Garantizar una excelente calidad</li>
+						<li>Bazar, Regalería, Artesanías, Particulares</li>
 					</ul>
 					Fibrofacil
 					<ul>
 						<li>Compuesto de madera para la construcción (PESO)</li>
-						<li>Se comercializa en paneles de 3 - 15 mm espesor</li>
 					</ul>
 				</aside>
+			</section>
+			<section id="Fibro" style="display: flex;" >
+				<img class="imagen" width="800" height="600" src="images/Fibrofacil2.jpg">
 			</section>
 			<section id="Actualidad" data-timing="180">
 				<h2>Forma de trabajo</h2>
@@ -117,22 +115,18 @@
 						</tr>
 					</tbody>
 				</table>
-
-				<aside class="notes">
-					<h3>Hasta acá 3 min</h3>
-				</aside>
 			</section>
 			<section id="Arquitectura" 
-				data-timing="50"
+				data-timing="60"
 				data-background-image="images/FrontBack.png" 
 				data-background-opacity=0.3>
 				<h2>Desarrollo</h2>
 				<img class="imagen" width="600" height="400" src="images/ClientServer.jpg">
 				<aside class="notes">
-					<h3>Hasta acá 6 min</h3>
+					<h3>5 min</h3>
 				</aside>
 			</section>
-			<section id="Negocio">
+			<section id="Negocio" data-timing="90">
 				<h3>Modelo de Negocio</h3>
 				<table>
 					<thead>
@@ -168,7 +162,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="Inversión" data-timing="180">
+			<section id="Inversión" data-timing="90">
 				<h2>Inversión necesaria</h2>
 				<ul>
 					<li class="fragment fade-right">Costo de Licenciamiento = <span class="fragment">$ 0</span></li>
@@ -176,7 +170,7 @@
 					<li class="fragment fade-right">1/n PC o Notebook utilizadas por los empleados</li>
 				</ul>
 			</section>
-			<section id="Interfaz">
+			<section id="Interfaz" data-timing="60">
 				<section>
 					<h2>Interfaz del sistema</h2>
 				</section>
